[package]
name = "special-folder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows-sys]
version = "0.36"
features = ["Win32_UI_Shell", "Win32_Foundation"]

[dependencies.strum]
version = "0.24"
features = ["derive"]
